Strukturerat om strukturen

--- a/index.html
+++ b/index.html
@@ -6,27 +6,96 @@
     <title></title>
   </head>
   <body>
-    <h1> Glittery things, by Rebecca </h1>
-    <div class="travelclass">
-      <h3> Travel </h3>
+    <h1> Glittery, by Rebecca </h1>
+
+<div class="wrapper">
+  <div class="container">
+    <div class="containertravel">
+      <div class="travelclass">
       <img src="https://data.whicdn.com/images/310824385/large.jpg" alt="favorit destination"/>
-      <h3> Favorit destinationer, resedagbok, wanderlust, city guides  </h3>
-      <p> I want to travel the world - Platser jag besökt, platser jag älskar, platser jag vill utforska och se. </p>
+
+      <div class="texttravel">
+      <h2> Travel </h2>
+      <h3> CITY GUIDES: My top 5 destinations along the French Riviera </h2>
+      <p> The French Riviera is well-known the world over for its glamour and beauty - but these spots take it to a new level.
+        From sea views to fields of lavender, this is my top 5 favorite spots.
+        Nize, Èze, Grasse, Saint-Rapaël and Monaco. </p>
+      </div>
+      </div>
     </div>
-    <div>
-      <h2> Fashion </h2>
+
+    <div class: "containerfashion">
+      <div class="fashionclass">
       <img src="https://data.whicdn.com/images/313457980/large.jpg" alt="stil inpiration"/>
-      <h3> Stil inspiration, runway, streetstyle </h3>
-      <p> It's spelled fashion - Looks som ska inspirera, kunna kopieras och bäras straight away. </p>
+
+      <div class="fashiontext">
+      <h2> Fashion </h2>
+      <h3> STYLE INSPIRATION: My style picks for summer </h3>
+      <p> Accessories as earrings, colourful bags and hairbands, floral dresses and all white. </p>
     </div>
-    <div>
+    </div>
+  </div>
+  </div>
+</div>
+
+<div class="wrapper">
+<div class="container2">
+
+    <div class="foodclass box">
+      <img src="https://images.101cookbooks.com/vegetarian_grilling_halloumi.jpg?w=620&auto=format" alt="recept tips"/>
+      <div class="foodtext">
       <h2> Food </h2>
-      <img src="https://data.whicdn.com/images/310637078/large.jpg" alt="recept tips"/>
-      <h3> Recept, resturanger, i köket </h3>
-      <p> blablablab </p>
+      <h3> RECIPES: Vegetarian recipes I love </h3>
+      <p> Summer is just around the corner and what isn't better than to grill.
+      I have gathering my favorite vegetarian recipes, which contains everything from vegetable-mix to delicious salads. </p>
     </div>
-    <div>
-      <h2> Mina texter </h2>
-      <p> Texter om livet, drömmar, resor och mål. </p>
+
+    </div>
+
+    <div class="statementearrings box">
+      <img src="https://data.whicdn.com/images/300915216/large.jpg" alt="statementearrings"/>
+      <div class="earingstext">
+      <h2> Fashion </h2>
+      <h3> STYLE INSPIRATION: Statement earrings I want to wear this summer </h3>
+    </div>
+    </div>
+
+    <div class="readingtips box">
+      <img src="https://data.whicdn.com/images/314065880/large.jpg" alt="readingtips"/>
+      <div class="readingtext">
+      <h2> Weekly </h2>
+      <h3> READING TIPS: The light we lost by Jill Santopolo. </h3>
+      <p> There are days that change the course of somenone's life forever, and these days usually do not stand out until they are reflected upon. Sometimes things happen that are so sweeping
+        that they are immediately standouts, the day immediately etched into memory forever. "The Light We Lost" is a novel of the way love appears and changes people's entire lives: how
+        memories can affect the present and how one person can alter the course of a life forever. </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+  <div class="outer_container">
+    <img src="https://data.whicdn.com/images/150959061/large.jpg" alt="hawaiibild"/>
+
+    <div class="Hawaiiclass">
+      <h2> Travel </h2>
+      <h3> TRAVEL DIARY: What not to miss at Oahu, Hawaii </h3>
+      <p> When visting Oahu it is easy to get stuck at Waikiki beach, but the main island of Hawaii has so much more.
+      1. Hanuma bay nature preserve, a snorkeling paradise along the south coast of Oahu, come here early in the morning to avoid the largest congestion.
+      2. Hike Diamond Head or Koko Crater Trail, when visiting a island of Hawaii hiking is mandatory.
+      3. North Shore, nothing is more famous at Oahu then the North Shore with it's enormous waves during winter. But the coast is worth driving during all seasons,
+      with cozy little towns, beautiful beaches (not as crowded as Waikiki) and pineapplecultures.
+      4. Nu'uanu Pali Lookout, do not miss this fantastic lookout point </p>
+    </div>
+  </div>
+
+  <div class="outer_container1">
+    <div class="Quoteclass">
+      <h2> Quote </h2>
+      <p> Fear is a common feeling and especially when doing something that force you to step outside your comfort-zone.
+      Which most of our dreams actually do.  </p>
+    </div>
+    <img src="https://data.whicdn.com/images/233186503/large.jpg" alt="textbild"/>
+  </div>
+
   </body>
 </html>
