--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./styles.css" type="text/css">
+    <meta name="viewport" content="width=device-width">
     <title></title>
   </head>
   <body>
@@ -18,7 +19,7 @@
       <h2> Travel </h2>
       <h3> CITY GUIDES: My top 5 destinations along the French Riviera </h2>
       <p> The French Riviera is well-known the world over for its glamour and beauty - but these spots take it to a new level.
-        From sea views to fields of lavender, this is my top 5 favorite spots.
+        From sea views to fields of lavender, this is my top 5 favorite spots:
         Nize, Èze, Grasse, Saint-Rapaël and Monaco. </p>
       </div>
       </div>
@@ -31,7 +32,8 @@
       <div class="fashiontext">
       <h2> Fashion </h2>
       <h3> STYLE INSPIRATION: My style picks for summer </h3>
-      <p> Accessories as earrings, colourful bags and hairbands, floral dresses and all white. </p>
+      <p> Accessories as earrings, colourful bags and hairbands, floral dresses and all white looks is going to be
+          the keys to my go to look during this summer. </p>
     </div>
     </div>
   </div>
@@ -57,6 +59,8 @@
       <div class="earingstext">
       <h2> Fashion </h2>
       <h3> STYLE INSPIRATION: Statement earrings I want to wear this summer </h3>
+      <p> A pair of statement earrings can elevate any outfit, taking your casual look to late-night out.
+        They can literally take the most simple looks and make them that much more. </p>
     </div>
     </div>
 
@@ -80,19 +84,23 @@
       <h2> Travel </h2>
       <h3> TRAVEL DIARY: What not to miss at Oahu, Hawaii </h3>
       <p> When visting Oahu it is easy to get stuck at Waikiki beach, but the main island of Hawaii has so much more.
-      1. Hanuma bay nature preserve, a snorkeling paradise along the south coast of Oahu, come here early in the morning to avoid the largest congestion.
-      2. Hike Diamond Head or Koko Crater Trail, when visiting a island of Hawaii hiking is mandatory.
-      3. North Shore, nothing is more famous at Oahu then the North Shore with it's enormous waves during winter. But the coast is worth driving during all seasons,
-      with cozy little towns, beautiful beaches (not as crowded as Waikiki) and pineapplecultures.
-      4. Nu'uanu Pali Lookout, do not miss this fantastic lookout point </p>
+        Here is what you not should miss out of if you ever travel to Oahu: </p>
+    <p>  1. Hanuma bay nature preserve, a snorkeling paradise along the south coast of Oahu. PS. come here early in the morning to avoid the largest congestion.
+      2. Hike Diamond Head or Koko Crater Trail, when visiting a island of Hawaii hiking is mandatory, because the view is out of this world.
+      3. North Shore, nothing is more famous on Oahu then the North Shore with it's enormous waves during winter. But the coast is worth driving during all seasons,
+      with it's cozy little towns, beautiful beaches (not as crowded as Waikiki) and pineapplecultures.
+      4. Nu'uanu Pali Lookout, do not miss this fantastic lookout point. PS. Be aware of the bees. </p>
     </div>
   </div>
 
   <div class="outer_container1">
     <div class="Quoteclass">
-      <h2> Quote </h2>
-      <p> Fear is a common feeling and especially when doing something that force you to step outside your comfort-zone.
-      Which most of our dreams actually do.  </p>
+      <h2> My texts and thoughts </h2>
+      <p> As Eleanor Roosvelt once said: You gain strength, courage and confidence by every experience in which you really
+        stop to look fear in the face. You must do the thing you think you cannot do. </p>
+      <p> Fear is a common feeling and especially when doing something that force you to step outside your comfort-zone, which most of our dreams make us do.
+        When you do something that scares and challenge you, when you do something that makes your heart beat alot faster you grow as a human being.
+        When you refuse to let the fear of failing and for the unknown limit you, thats when your dreams comes true. </p>
     </div>
     <img src="https://data.whicdn.com/images/233186503/large.jpg" alt="textbild"/>
   </div>
