La till länk till instagram

--- a/index.html
+++ b/index.html
@@ -105,5 +105,9 @@
     <img src="https://data.whicdn.com/images/233186503/large.jpg" alt="textbild"/>
   </div>
 
+  <div class="Instagramclass">
+<a href="https://www.instagram.com/rebeccaseger/"> Link to Instagram</a>
+</div>
+
   </body>
 </html>
