Sista dagen fix, med bakgrundsfärg

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title></title>
   </head>
   <body>
-    <h1> Glittery, by Rebecca </h1>
+    <h1> Glittery things, by Rebecca </h1>
+  
+    <div class="undertext">
+    <h2> Weekly inspiration from everyday life collected in one place. </h2>
+  </div class>
 
 <div class="wrapper">
   <div class="container">
@@ -19,8 +23,8 @@
       <h2> Travel </h2>
       <h3> CITY GUIDES: My top 5 destinations along the French Riviera </h2>
       <p> The French Riviera is well-known the world over for its glamour and beauty - but these spots take it to a new level.
-        From sea views to fields of lavender, this is my top 5 favorite spots:
-        Nize, Èze, Grasse, Saint-Rapaël and Monaco. </p>
+        From sea views to fields of lavender, this is my top 5 favorite spots: </p>
+      <p> Nize, Èze, Grasse, Saint-Rapaël and Monaco. </p>
       </div>
       </div>
     </div>
@@ -48,8 +52,8 @@
       <div class="foodtext">
       <h2> Food </h2>
       <h3> RECIPES: Vegetarian recipes I love </h3>
-      <p> Summer is just around the corner and what isn't better than to grill.
-      I have gathering my favorite vegetarian recipes, which contains everything from vegetable-mix to delicious salads. </p>
+      <p> Summer is just around the corner and what isn't better than to have a gardenparty.
+      I have gathering my favorite vegetarian recipes, consisting of everything from vegetable-mix to delicious salads. </p>
     </div>
 
     </div>
@@ -59,8 +63,8 @@
       <div class="earingstext">
       <h2> Fashion </h2>
       <h3> STYLE INSPIRATION: Statement earrings I want to wear this summer </h3>
-      <p> A pair of statement earrings can elevate any outfit, taking your casual look to late-night out.
-        They can literally take the most simple looks and make them that much more. </p>
+      <p> A pair of statement earrings can elevate any outfit, taking your casual everyday look to late-night out.
+        They can literally make the most simple look that much more. </p>
     </div>
     </div>
 
@@ -105,9 +109,14 @@
     <img src="https://data.whicdn.com/images/233186503/large.jpg" alt="textbild"/>
   </div>
 
+<div class="container4">
   <div class="Instagramclass">
-<a href="https://www.instagram.com/rebeccaseger/"> Link to Instagram</a>
+<a href="https://www.instagram.com/rebeccaseger/"> Instagram</a>
+<a href="https://www.facebook.com/rebecca.seger.1"> Facebook</a>
+<a href="https://twitter.com/rebeccaseger"> Twitter</a>
 </div>
+</div>
+
 
   </body>
 </html>
