--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <h1> Glittery things, by Rebecca </h1>
-  
+
     <div class="undertext">
-    <h2> Weekly inspiration from everyday life collected in one place. </h2>
+    <h2> Weekly inspiration from everyday life collected in one place </h2>
   </div class>
 
 <div class="wrapper">
